setup javafx and get pull from main

--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -1,4 +1,5 @@
 /* File Sharing Application - Modern CSS Styling */
+/* stylelint-disable property-no-vendor-prefix */
 
 /* Root color palette */
 .root {
